HLT-4720 - ensure that bread crumbs (progress bar) is not visible when AB split test is not active

--- a/src/main/webapp/bundles/health_v4/less/slideContentVisibility.less
+++ b/src/main/webapp/bundles/health_v4/less/slideContentVisibility.less
@@ -39,25 +39,33 @@
 
   &[data-step="results"] {
     .progress-bar-row {
-      .slide-feature-is-visible();
-    }
-
-    .journeyProgressBar[data-phase="application"] {
       .slide-feature-hidden();
-    }
-
-    .journeyProgressBar[data-phase="journey"] {
-      .slide-feature-is-visible();
     }
 
     .results-control-container {
       .slide-feature-is-visible();
     }
 
-    &.moreInfoVisible {
+    &.split-test-15 {
+
       .progress-bar-row {
+        .slide-feature-is-visible();
+      }
+
+      .journeyProgressBar[data-phase="application"] {
         .slide-feature-hidden();
       }
+
+      .journeyProgressBar[data-phase="journey"] {
+        .slide-feature-is-visible();
+      }
+
+      &.moreInfoVisible {
+        .progress-bar-row {
+          .slide-feature-hidden();
+        }
+      }
+
     }
 
   }
